# Reflective

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Reflective/: Cargo.toml
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/evolution/: page.tsx
app/onboarding/: page.tsx
app/reflection/: page.tsx
components/ui/: Button.tsx  Card.tsx  Input.tsx  Slider.tsx  Textarea.tsx
lib/: context.tsx  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: analytics.rs  behavior.rs  identity.rs  mod.rs  reflection.rs  trait_.rs  user.rs
